Changelog
=========

2.1.2 (unreleased)
------------------

- Amend browser.txt test to the new p.a.registry-based control panels
  (Plone 5 only).
  [timo]


2.1.1 (2014-10-22)
------------------

- Fix i18n of 'This field is required' for the login field in pwreset form.
  [vincentfretin]

- Ported tests to plone.app.testing
  [tomgross]


2.1.0 (2014-02-26)
------------------

- Barceloneta Plone 5 theme test fix.
  [davisagli]


2.0.16 (2014-01-27)
-------------------

- Password reset emails will now be sent from the navigation root instead
  the portal, enabling support for multilingual sites and other subsites
  to keep the correct language, title, menus and designs.
  [regebro]


2.0.15 (2013-08-13)
-------------------

- Nothing changed yet.


2.0.14 (2013-05-23)
-------------------

- Always try to look up what the user entered as a login name before
  treating it as a user id.
  [davisagli]

- Make sure password reset form action url is based on the reset tool and not
  the "passwordreset" python script. Fixes issue where the "passwordreset"
  was executed before the pwreset_form action handler was traversed to and
  caused an error before the reset request could even be attempted.
  [vangheem]


2.0.13 (2013-03-17)
-------------------

- Fix exception when use_email_as_login is on and the user enters
  an invalid login on pwreset_form.
  [davisagli]


2.0.12 (2013-03-05)
-------------------

- Fixed typo in registered_notify_template.pt: capitalization of sentence start.


2.0.11 (2013-01-13)
-------------------

- Fixed undefined django_crypto.
  [maurits]


2.0.10 (2012-12-09)
-------------------

- Use system random when available. This is part of the fix for
  https://plone.org/products/plone/security/advisories/20121106/24
  [davisagli]

- registered_notify_template.pt: show login name instead of user id.
  Normally this is the same, but this is not necessarily true when
  using the email address as login name.
  [maurits]


2.0.9 (2012-08-30)